2009-11-16 Ian Rutt
 * libglide/glide_thck.F90: Fixed bug introduced into non-linear scheme in
   commit 1391. e2.f regtest succeeds against r1371
 * libglimmer/glimmer_slap.F90: Added slap error number to output when
   error encountered.

2009-11-16 Magnus Hagdorn
 * libglide/glide.F90: pass horizontal grid to temperature initialisation
 * libglide/glide_tempFullSoln.F90: use horizontal coordinate system type
   for coordinate definitions

2009-11-16 Magnus Hagdorn
 * libglimmer/glimmer_coordinates.F90: use arrays of length 2 instead of
   derived types for points, remove one level of derived types
 * libglimmer/glimmer_map_trans.F90: memembers of coord type are arrays
   access them directly
 * libglint/glint_climate.F90: ditto
 * libglint/glint_initialise.F90: ditto
 * libglint/glint_interp.F90: ditto
 * libglint/glint_timestep.F90: ditto

2009-11-16 Magnus Hagdorn
 * libglide/glide_tempFullSoln.F90: vertical coordinate system is no longer
   a pointer, initialise it and copy data from argument
 * libglide/glide_types.F90: vertical coordinate system type is no longer a
   pointer
 * libglimmer/glimmer_vertcoord.F90: add procedure to initialise type from an
   initialised one and copy its data

2009-11-13 Magnus Hagdorn
 * added changeset 1321 which was missing

2009-11-10 Ian Rutt
 * libglide/glide_thck.F90: Fixed failed regtest - now passes e2.a and
   e2.h. Fixed memory leak in SLAP interface (though this _may_ have been
   due to a gfortran bug).

2009-11-10 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: check for C++ compiler and C++ bindings to netCDF
 * m4macros/netcdf.m4: implemented check for C++ netCDF bindings
 * utils/Makefile.am: compile new program
 * utils/compare.cpp: add new utility which tests if two netCDF files
   are reasonably identical

2009-11-07 Ian Rutt
 * libglide/glide_thck.F90: More refactoring of thickness calc. Began to
   combine linear and non-linear SIA schemes. Not regtested yet.

2009-11-02 Ian Rutt